Stochastic Gradient Descent

--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -89,6 +89,39 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>SGD is sensitive to the scale of the properties and target variables, so we apply standard scaling to the values of all variables."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "X_scaler = MinMaxScaler()\n",
+    "y_scaler = MinMaxScaler()\n",
+    "\n",
+    "X = X_scaler.fit_transform(X)\n",
+    "\n",
+    "y = y_scaler.fit_transform(y.values.reshape(-1,1))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
