Stochastic Gradient Descent

--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -122,6 +122,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>HOLD-OUT"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
