Stochastic Gradient Descent

--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -151,6 +151,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "sgd_reg = SGDRegressor(random_state=42,penalty='elasticnet')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
