Stochastic Gradient Descent

--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -164,6 +164,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>For the penalty rule in SGD optimization, we used the ElasticNet regression, which evaluates the L1 and L2 rules together. In this case, we need to determine how much weight we will make for L1 and L2."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
