Stochastic Gradient Descent

--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -176,6 +176,79 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Hyperparameter Optimization"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\envs\\batuhan\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:378: FitFailedWarning: \n",
+      "2640 fits failed out of a total of 10560.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "2640 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\envs\\batuhan\\lib\\site-packages\\sklearn\\linear_model\\_stochastic_gradient.py\", line 192, in _get_learning_rate_type\n",
+      "    return LEARNING_RATE_TYPES[learning_rate]\n",
+      "KeyError: 'inscaling'\n",
+      "\n",
+      "The above exception was the direct cause of the following exception:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\envs\\batuhan\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 686, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\envs\\batuhan\\lib\\site-packages\\sklearn\\linear_model\\_stochastic_gradient.py\", line 1561, in fit\n",
+      "    return self._fit(\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\envs\\batuhan\\lib\\site-packages\\sklearn\\linear_model\\_stochastic_gradient.py\", line 1496, in _fit\n",
+      "    self._validate_params()\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\envs\\batuhan\\lib\\site-packages\\sklearn\\linear_model\\_stochastic_gradient.py\", line 158, in _validate_params\n",
+      "    self._get_learning_rate_type(self.learning_rate)\n",
+      "  File \"C:\\ProgramData\\Anaconda3\\envs\\batuhan\\lib\\site-packages\\sklearn\\linear_model\\_stochastic_gradient.py\", line 194, in _get_learning_rate_type\n",
+      "    raise ValueError(\n",
+      "ValueError: learning rate inscaling is not supported. \n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "C:\\ProgramData\\Anaconda3\\envs\\batuhan\\lib\\site-packages\\sklearn\\model_selection\\_search.py:953: UserWarning: One or more of the test scores are non-finite: [-0.86167082 -0.86167082 -0.86167082 ...  0.55046976  0.55046976\n",
+      "  0.55046976]\n",
+      "  warnings.warn(\n",
+      "C:\\ProgramData\\Anaconda3\\envs\\batuhan\\lib\\site-packages\\sklearn\\utils\\validation.py:1111: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "params = {'alpha' : [0.0001,0.001,0.01],\n",
+    "          'eta0' : [0.0001,0.001,0.01,0.1],\n",
+    "          'l1_ratio' : [0,0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1],\n",
+    "          'learning_rate' : ['constant','optimal','inscaling','adaptive'],\n",
+    "          'max_iter' : [50,100,500,1000]}\n",
+    "\n",
+    "sgd_Gs = GridSearchCV(sgd_reg,params,n_jobs=-1,scoring='r2',cv=5).fit(X_train,y_train)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
