Stochastic Gradient Descent

--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -453,8 +453,43 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Estimation parameters coefficients"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([0.01692942])"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sgd_final.intercept_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
