Stochastic Gradient Descent

--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -511,6 +511,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "- $\\hat{y} =0.016 + 0.293*rooms + 0.16*m_{2} + 0.111*floor - 0.128*age$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
