Stochastic Gradient Descent

--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -524,6 +524,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train R2 : {0.7321784405612313}\n",
+      "Test R2 : {0.6901787126678489}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Train R2 :',{sgd_final.score(X_train,y_train)})\n",
+    "print(f'Test R2 :',{sgd_final.score(X_test,y_test)})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
