--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -548,6 +548,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   price  pred_price\n0    475  439.132969\n1    475  463.534165\n2    450  448.972417\n3    450  467.027856\n4    475  456.825290",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>price</th>\n      <th>pred_price</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>475</td>\n      <td>439.132969</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>475</td>\n      <td>463.534165</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>450</td>\n      <td>448.972417</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>450</td>\n      <td>467.027856</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>475</td>\n      <td>456.825290</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['pred_price'] = sgd_final.predict(X)\n",
+    "\n",
+    "df['pred_price'] = y_scaler.inverse_transform(df['pred_price'].values.reshape(-1,1))\n",
+    "\n",
+    "df[['price','pred_price']].head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b> Graph"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
