Stochastic Gradient Descent

--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -633,6 +633,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train R2: 454.3634585018962\n",
+      "Test R2:  455.8369378079987\n"
+     ]
+    }
+   ],
+   "source": [
+    "MSE_train = mean_squared_error(y_train,sgd_final.predict(X_train))\n",
+    "print('Train R2:',y_scaler.inverse_transform(MSE_train.reshape(-1,1))[0,0])\n",
+    "\n",
+    "MSE_test = mean_squared_error(y_test,sgd_final.predict(X_test))\n",
+    "print('Test R2: ',y_scaler.inverse_transform(MSE_test.reshape(-1,1))[0,0])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
