Stochastic Gradient Descent

--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -40,7 +40,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split,GridSearchCV,cross_val_score,KFold\n",
     "from sklearn.metrics import r2_score,mean_squared_error\n",
-    "from sklearn.linear_model import SGDRegressor\n",
+    "from sklearn.linear_model import SGDRegressor,LinearRegression\n",
     "\n",
     "from yellowbrick.model_selection import CVScores\n"
    ],
@@ -633,28 +633,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train R2: 454.3634585018962\n",
-      "Test R2:  455.8369378079987\n"
+      "Train MSE: 454.3634585018962\n",
+      "Test MSE:  455.8369378079987\n"
      ]
     }
    ],
    "source": [
     "MSE_train = mean_squared_error(y_train,sgd_final.predict(X_train))\n",
-    "print('Train R2:',y_scaler.inverse_transform(MSE_train.reshape(-1,1))[0,0])\n",
+    "print('Train MSE:',y_scaler.inverse_transform(MSE_train.reshape(-1,1))[0,0])\n",
     "\n",
     "MSE_test = mean_squared_error(y_test,sgd_final.predict(X_test))\n",
-    "print('Test R2: ',y_scaler.inverse_transform(MSE_test.reshape(-1,1))[0,0])"
+    "print('Test MSE: ',y_scaler.inverse_transform(MSE_test.reshape(-1,1))[0,0])"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>Linear Regression"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
