Stochastic Gradient Descent

--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -672,6 +672,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "X = df[['rooms','m2','floor','age']]\n",
+    "y = df['price']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
