--- a/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
+++ b/Supervised Learning/Stochastic Gradient Descent/StochasticGradientDescent.ipynb
@@ -689,10 +689,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "outputs": [],
    "source": [
-    "lr =LinearRegression().fit(X_train,y_train)"
+    "lr =LinearRegression().fit(X_train,y_train)\n",
+    "\n",
+    "y_train_pred = lr.predict(X_train)\n",
+    "y_test_pred = lr.predict(X_test)"
    ],
    "metadata": {
     "collapsed": false,
@@ -703,13 +706,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 44,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Reg Train MSE : 3145.0627316271507\n",
+      "Linear Reg Test MSE : 4115.003886902745\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Linear Reg Train MSE :',mean_squared_error(y_train,y_train_pred))\n",
+    "print('Linear Reg Test MSE :',mean_squared_error(y_test,y_test_pred))"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Reg Train R2 : 0.733739961656849\n",
+      "Linear Reg Test R2 : 0.6987282352837991\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Linear Reg Train R2 :',lr.score(X_train,y_train))\n",
+    "print('Linear Reg Test R2 :',lr.score(X_test,y_test))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>The error of the optimum model determined as a result of SGD optimization (MSE was used as a criterion) was found to be 454 for the training data and 455 for the test set. The error values of the classical linear regression model were found to be approximately 3145 for the training data and 4115 for the test data. Thus, it was revealed that the classical multiple linear regression model was not the model with the lowest possible error."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
