--- a/Supervised Learning/Measuring Model Success/MeasuringModelSuccess.ipynb
+++ b/Supervised Learning/Measuring Model Success/MeasuringModelSuccess.ipynb
@@ -406,24 +406,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "48.48285214431297\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "18.63330944487656"
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "x = bostondf.drop('medv',axis=1)\n",
     "\n",
@@ -447,7 +431,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
