--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -1,16 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# CREATING INTERFACE WITH TKINTER LIBRARY"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<b>The aim of this study is not to develop a very good machine learning model. It is essential to establish a base model with the data set we have and to create an interface for this model."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   },
-   "outputs": [],
-   "source": []
+   }
   }
  ],
  "metadata": {
