--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -40,6 +40,35 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split,cross_validate\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.metrics import RocCurveDisplay\n",
+    "import tkinter as tk\n",
+    "\n",
+    "pd.set_option('display.max_columns', 100)\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.width', 500)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
