CREATING INTERFACE WITH TKINTER LIBRARY

--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -67,6 +67,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "def check_df(dataframe, head=5):\n",
+    "    print(\"##################### Shape #####################\")\n",
+    "    print(dataframe.shape)\n",
+    "    print(\"##################### Types #####################\")\n",
+    "    print(dataframe.dtypes)\n",
+    "    print(\"##################### Head #####################\")\n",
+    "    print(dataframe.head(head))\n",
+    "    print(\"##################### Tail #####################\")\n",
+    "    print(dataframe.tail(head))\n",
+    "    print(\"##################### NA #####################\")\n",
+    "    print(dataframe.isnull().sum())\n",
+    "    print(\"##################### Describe #####################\")\n",
+    "    print(dataframe.describe([0, 0.05, 0.50, 0.95, 0.99, 1]).T)\n",
+    "\n",
+    "def grab_col_names(dataframe, cat_th=10, car_th=20):\n",
+    "\n",
+    "    # cat_cols, cat_but_car\n",
+    "    cat_cols = [col for col in dataframe.columns if dataframe[col].dtypes == \"O\"]\n",
+    "    num_but_cat = [col for col in dataframe.columns if dataframe[col].nunique() < cat_th and\n",
+    "                   dataframe[col].dtypes != \"O\"]\n",
+    "    cat_but_car = [col for col in dataframe.columns if dataframe[col].nunique() > car_th and\n",
+    "                   dataframe[col].dtypes == \"O\"]\n",
+    "    cat_cols = cat_cols + num_but_cat\n",
+    "    cat_cols = [col for col in cat_cols if col not in cat_but_car]\n",
+    "\n",
+    "    # num_cols\n",
+    "    num_cols = [col for col in dataframe.columns if dataframe[col].dtypes != \"O\"]\n",
+    "    num_cols = [col for col in num_cols if col not in num_but_cat]\n",
+    "\n",
+    "    print(f\"Observations: {dataframe.shape[0]}\")\n",
+    "    print(f\"Variables: {dataframe.shape[1]}\")\n",
+    "    print(f'cat_cols: {len(cat_cols)}')\n",
+    "    print(f'num_cols: {len(num_cols)}')\n",
+    "    print(f'cat_but_car: {len(cat_but_car)}')\n",
+    "    print(f'num_but_cat: {len(num_but_cat)}')\n",
+    "    return cat_cols, num_cols, cat_but_car"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
