CREATING INTERFACE WITH TKINTER LIBRARY

--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def check_df(dataframe, head=5):\n",
@@ -105,7 +105,11 @@
     "    print(f'num_cols: {len(num_cols)}')\n",
     "    print(f'cat_but_car: {len(cat_but_car)}')\n",
     "    print(f'num_but_cat: {len(num_but_cat)}')\n",
-    "    return cat_cols, num_cols, cat_but_car"
+    "    return cat_cols, num_cols, cat_but_car\n",
+    "\n",
+    "def one_hot_encoder(dataframe, categorical_cols, drop_first=False):\n",
+    "    dataframe = pd.get_dummies(dataframe, columns=categorical_cols, drop_first=drop_first)\n",
+    "    return dataframe"
    ],
    "metadata": {
     "collapsed": false,
