CREATING INTERFACE WITH TKINTER LIBRARY

--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -133,6 +133,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "##################### Shape #####################\n",
+      "(768, 9)\n",
+      "##################### Types #####################\n",
+      "Pregnancies                   int64\n",
+      "Glucose                       int64\n",
+      "BloodPressure                 int64\n",
+      "SkinThickness                 int64\n",
+      "Insulin                       int64\n",
+      "BMI                         float64\n",
+      "DiabetesPedigreeFunction    float64\n",
+      "Age                           int64\n",
+      "Outcome                       int64\n",
+      "dtype: object\n",
+      "##################### Head #####################\n",
+      "   Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  DiabetesPedigreeFunction  Age  Outcome\n",
+      "0            6      148             72             35        0  33.6                     0.627   50        1\n",
+      "1            1       85             66             29        0  26.6                     0.351   31        0\n",
+      "2            8      183             64              0        0  23.3                     0.672   32        1\n",
+      "3            1       89             66             23       94  28.1                     0.167   21        0\n",
+      "4            0      137             40             35      168  43.1                     2.288   33        1\n",
+      "##################### Tail #####################\n",
+      "     Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  DiabetesPedigreeFunction  Age  Outcome\n",
+      "763           10      101             76             48      180  32.9                     0.171   63        0\n",
+      "764            2      122             70             27        0  36.8                     0.340   27        0\n",
+      "765            5      121             72             23      112  26.2                     0.245   30        0\n",
+      "766            1      126             60              0        0  30.1                     0.349   47        1\n",
+      "767            1       93             70             31        0  30.4                     0.315   23        0\n",
+      "##################### NA #####################\n",
+      "Pregnancies                 0\n",
+      "Glucose                     0\n",
+      "BloodPressure               0\n",
+      "SkinThickness               0\n",
+      "Insulin                     0\n",
+      "BMI                         0\n",
+      "DiabetesPedigreeFunction    0\n",
+      "Age                         0\n",
+      "Outcome                     0\n",
+      "dtype: int64\n",
+      "##################### Describe #####################\n",
+      "                          count        mean         std     min      0%        5%       50%        95%        99%    100%     max\n",
+      "Pregnancies               768.0    3.845052    3.369578   0.000   0.000   0.00000    3.0000   10.00000   13.00000   17.00   17.00\n",
+      "Glucose                   768.0  120.894531   31.972618   0.000   0.000  79.00000  117.0000  181.00000  196.00000  199.00  199.00\n",
+      "BloodPressure             768.0   69.105469   19.355807   0.000   0.000  38.70000   72.0000   90.00000  106.00000  122.00  122.00\n",
+      "SkinThickness             768.0   20.536458   15.952218   0.000   0.000   0.00000   23.0000   44.00000   51.33000   99.00   99.00\n",
+      "Insulin                   768.0   79.799479  115.244002   0.000   0.000   0.00000   30.5000  293.00000  519.90000  846.00  846.00\n",
+      "BMI                       768.0   31.992578    7.884160   0.000   0.000  21.80000   32.0000   44.39500   50.75900   67.10   67.10\n",
+      "DiabetesPedigreeFunction  768.0    0.471876    0.331329   0.078   0.078   0.14035    0.3725    1.13285    1.69833    2.42    2.42\n",
+      "Age                       768.0   33.240885   11.760232  21.000  21.000  21.00000   29.0000   58.00000   67.00000   81.00   81.00\n",
+      "Outcome                   768.0    0.348958    0.476951   0.000   0.000   0.00000    0.0000    1.00000    1.00000    1.00    1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_df(df_train)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
