CREATING INTERFACE WITH TKINTER LIBRARY

--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -217,6 +217,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Observations: 768\n",
+      "Variables: 9\n",
+      "cat_cols: 1\n",
+      "num_cols: 8\n",
+      "cat_but_car: 0\n",
+      "num_but_cat: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat_col, num_col, cat_but_car = grab_col_names(df_train)\n",
+    "cat_col  = [col for col in cat_col if col !=target]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
