--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -245,6 +245,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "df_train = one_hot_encoder(df_train,cat_col,True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
