--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -317,9 +317,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "cros_val = cross_validate(estimator=model,\n",
+    "                          X=X_test,\n",
+    "                          y=y_test,\n",
+    "                          scoring='accuracy',\n",
+    "                          cv=10,n_jobs=-1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "cros_val['test_score'].mean()"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
