CREATING INTERFACE WITH TKINTER LIBRARY

--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -335,11 +335,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0.7638551031200423"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cros_val['test_score'].mean()"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
