CREATING INTERFACE WITH TKINTER LIBRARY

--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -483,6 +483,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "canvas1 = tk.Canvas(root,width=400,height=400)\n",
+    "canvas1.pack()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
