CREATING INTERFACE WITH TKINTER LIBRARY

--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -500,6 +500,25 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "label1 = tk.Label(root,text='Pregnancies: ')\n",
+    "\n",
+    "canvas1.create_window(100,100,window=label1)\n",
+    "entry1 = tk.Entry(root)\n",
+    "canvas1.create_window(200,100,window=entry1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
