CREATING INTERFACE WITH TKINTER LIBRARY

--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -557,6 +557,25 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "label4 = tk.Label(root,text='SkinThickness: ')\n",
+    "\n",
+    "canvas1.create_window(100,160,window=label4)\n",
+    "entry4 = tk.Entry(root)\n",
+    "canvas1.create_window(200,160,window=entry4)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
