CREATING INTERFACE WITH TKINTER LIBRARY

--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -576,6 +576,25 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "label5 = tk.Label(root,text='Insulin: ')\n",
+    "\n",
+    "canvas1.create_window(100,180,window=label5)\n",
+    "entry5 = tk.Entry(root)\n",
+    "canvas1.create_window(200,180,window=entry5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
