--- a/Supervised Learning/ModelGUI/TkinterGUI.ipynb
+++ b/Supervised Learning/ModelGUI/TkinterGUI.ipynb
@@ -633,6 +633,25 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "label8 = tk.Label(root,text='Age: ')\n",
+    "\n",
+    "canvas1.create_window(100,240,window=label8)\n",
+    "entry8 = tk.Entry(root)\n",
+    "canvas1.create_window(200,240,window=entry8)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
